<resources>
    <string name="app_name">Calendar_113033906</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>
    <string name="Sunday">Su</string>

    <string name="twitter_consumer_key">5WGptOlaXuQjVWRzBAGxujlPy</string>
    <string name="twitter_consumer_secret">o2KjptTGb5q0wSHvuWrcA9ixAdLQbdzwkx3lDTpCRjEFF4CUbU</string>
    <string name="twitter_callback_url">test://twitter</string>

    <string name="action_settings">Settings</string>
</resources>