<?xml version="1.0" encoding="utf-8"?>
<soup.neumorphism.NeumorphCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flat_card"
    style="@style/Widget.Neumorph.CardView"
    android:layout_width="wrap_content"
    android:layout_height="550dp"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="60dp"
    android:layout_marginEnd="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/prevButton"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/prevButton"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="9dp"
            android:layout_toStartOf="@+id/nextButton"
            android:background="#673AB7"
            android:gravity="center"
            android:text="@string/prev"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="17dp"
            android:background="#673AB7"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prevButton"
            android:layout_marginTop="34dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_weight="1"
                android:background="#EDEDED"
                android:gravity="center"
                android:text="@string/Monday"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#EDEDED"
                android:gravity="center"
                android:text="@string/Tuesday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#EDEDED"
                android:gravity="center"
                android:text="@string/Wednesday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#EDEDED"
                android:gravity="center"
                android:text="@string/Thursday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#EDEDED"
                android:gravity="center"
                android:text="@string/Friday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#EDEDED"
                android:gravity="center"
                android:text="@string/Saturday"
                android:textAlignment="center"
                android:textColor="@color/blueColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Sunday"
                android:textAlignment="center"
                android:textColor="@color/redColor"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <GridView
            android:id="@+id/calendarGridView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="146dp"
            android:layout_weight="15"
            android:horizontalSpacing="1dp"
            android:numColumns="7"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp" />
    </RelativeLayout>
</soup.neumorphism.NeumorphCardView>